--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <header class="header">
-    <h1>Termékek:</h1>
+<span>My Webshop</span>
 </header>
 
 <body>
